--- a/work.html
+++ b/work.html
@@ -21,33 +21,29 @@
             <li><a href="work.html">My work</a></li>
         </ul>
     </header>
-    <main>
+    <main class="work_main">
         <h2>2023年</h2>
-        <ul>
-            <li>
-                <p>2023年度制作展</p>
-                <img src="image/python1.png" alt="Python期末課題参考">
-                <img src="image/python2.png" alt="Python期末課題参考2">
-                <img src="image/python3.png" alt="Python期末課題参考3">
-    
-            </li>
-            <li>
-                <p>Python期末課題</p>
-                <img src="image/2023制作展.png" alt="2023制作展">
-                <img src="image/2023制作展2.png" alt="2023制作展2">
-                <img src="image/2023制作展3.png" alt="2023制作展3">
-            </li>
-        </ul>
+        <div>
+            <p>2023年度制作展</p>
+            <ul>
+                <li><img src="image/python1.png" alt="Python期末課題参考"></li>
+            </ul>
+            <p>Python期末課題</p>
+            <ul>
+                <li><img src="image/2023制作展.png" alt="2023制作展"></li>
+            </ul>
+        </div>
         <h2>2024年</h2>
-        <ul>
-            <li>
-                <p>2024年度制作展</p>
-                <img src="image/2024制作展.png" alt="2024制作展">
-                <img src="image/2024制作展2.png" alt="2024制作展2">
-                <img src="image/2024制作展3.png" alt="2024制作展3">
-            </li>
-            <li>授業課題 成績管理システム</li>
-        </ul>
+        <div>
+            <p>2024年度制作展</p>
+            <ul>
+                <li><img src="image/2024制作展.png" alt="2024制作展"></li>
+            </ul>
+            <p>授業課題 成績管理システム</p>
+            <ul>
+                <li><img src="image/portfolio.png" alt="PHP成績管理アプリ"></li>
+            </ul>
+        </div>
 
     </main>
 </body>
