レスポンシブ

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
         <ul class="header-left">
             <a href="index.html">
-                <div class="flex">
+                <div class="header_left_flex">
                     <li><img src="image/Frame1.png" alt="ロゴ"></li>
                     <li><h1>portfolio</h1></li>
                 </div>
