--- a/profile.html
+++ b/profile.html
@@ -21,7 +21,7 @@
             <li><a href="work.html">My work</a></li>
         </ul>
     </header>
-    <main>
+    <main class="plofile_main">
         <section class="about">
             <h2 class="title">About me</h2>
             <div>
