--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <h2 class="title">About</h2>
             <ul>
                 <div class="index_about">
-                    <div class="icon"><img src="image/Image200.jpg" alt="似顔絵"></div>
+                    <div class="faceicon"><img src="image/Image200.jpg" alt="似顔絵"></div>
                     <h3>海原 來未-Kaihara Kurumi-</h3>
                     <p class="aboutme">趣味のオンラインゲームがきっかけでパソコンに触れる機会が多くなり、日々の生活を便利にするシステムを作りたいと思い専門学校への入学を決意。4年制のスーパーゲームIT科ホワイトハッカー専攻でシステム開発やセキュリティについて学ぶ。</p>
                 </div>
