--- a/work.html
+++ b/work.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <title>制作した作品</title>
+    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
 </head>
 <body>
     <header>
@@ -24,31 +25,242 @@
     <main class="work_main">
         <h2>2023年</h2>
         <div>
-            <h3>2023年度制作展</h3>
-            <ul>
-                <li><img src="image/python1.png" alt="Python期末課題参考"></li>
+            <div class="flex">
+                <h3>2023年度制作展</h3>
+                <div class="modal-open"><img src="image/info_icon.svg" class="icon"></div>
+            </div>
+            <ul>             
+                <li>
+                    <img src="image/2023制作展.png" alt="2023制作展">
+
+                </li>
             </ul>
-            <h3>Python期末課題</h3>
+            <div class="flex">
+                <h3>Python期末課題</h3>
+                <div class="modal-open2"><img src="image/info_icon.svg" class="icon"></div>
+            </div>
             <ul>
-                <li><img src="image/2023制作展.png" alt="2023制作展"></li>
+                <li>
+                    <div><img src="image/python1.png" alt="Python期末課題参考">
+
+                </li>
             </ul>
         </div>
         <h2>2024年</h2>
         <div>
-            <h3>2024年度制作展</h3>
+            <div class="flex">
+                <h3>2024年度制作展</h3>
+                <div class="modal-open3"><img src="image/info_icon.svg" class="icon"></div>
+            </div>
             <ul>
-                <li><img src="image/2024制作展.png" alt="2024制作展"></li>
+                <li>
+                    <img src="image/2024制作展.png" alt="2024制作展">
+                </li>
             </ul>
-            <h3>授業課題 成績管理システム</h3>
+            <div class="flex">
+                <h3>授業課題 成績管理システム</h3>
+                <div class="modal-open4"><img src="image/info_icon.svg" class="icon"></div>
+            </div>
             <ul>
-                <li><img src="image/portfolio.png" alt="PHP成績管理アプリ"></li>
+                <li>
+                    <img src="image/portfolio.png" alt="PHP成績管理アプリ">
+                </li>
             </ul>
         </div>
         <h2>2025年</h2>
-        <h3>ポートフォリオ</h3>
+        <div class="flex">
+            <h3>ポートフォリオ</h3>
+            <div class="modal-open5"><img src="image/info_icon.svg" class="icon"></div>
+        </div>
         <ul>
-            <li><img src="image/Desktop - 1.png" alt="ポートフォリオ"></li>
+            <li>
+                <img src="image/Desktop - 1.png" alt="ポートフォリオ">
+            </li>
         </ul>
+                <!-- モーダル本体 -->
+        <div class="modal-container">
+            <div class="modal-body">
+                <!-- 閉じるボタン -->
+                <div class="modal-close">x</div>
+                <!-- モーダル内のコンテンツ -->
+                <div class="modal-content">
+                    <p>学校に入学して初めての制作展で作った作品です。主にインターネットに初めて触れる小中学生向けに、インターネットのリテラシーが学べるサイトを作ろうと思い製作しました。まいにち学ぶ意欲が湧くように、一日に一回できるおみくじも作成し、小学校低学年の子でも親しみやすいサイト制作を心掛けました。</p>
+                </div>
+            </div>
+        </div>
+        <!-- モーダル本体 -->
+        <div class="modal-container2">
+            <div class="modal-body">
+                <!-- 閉じるボタン -->
+                <div class="modal-close">x</div>
+                <!-- モーダル内のコンテンツ -->
+                <div class="modal-content">
+                    <p>Pythonの授業の学期末課題として、得意先管理システムを制作しました。データベースを接続し得意先の一覧表示や、検索、更新、削除ができるようになっています。</p>
+                </div>
+            </div>
+        </div>
+        <!-- モーダル本体 -->
+        <div class="modal-container3">
+            <div class="modal-body">
+                <!-- 閉じるボタン -->
+                <div class="modal-close">x</div>
+                <!-- モーダル内のコンテンツ -->
+                <div class="modal-content">
+                    <p>学校に入学してから二度目の制作展で制作しました。交換日記サイトになっており、日記や画像のやり取りが友達同士で楽しめるようになっています。また、グループチャット機能も作成しています。
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <!-- モーダル本体 -->
+        <div class="modal-container4">
+            <div class="modal-body">
+                <!-- 閉じるボタン -->
+                <div class="modal-close">x</div>
+                <!-- モーダル内のコンテンツ -->
+                <div class="modal-content">
+                    <p>PHPの授業で制作した成績の管理システムです。生徒アカウントでログインすると、自分の成績の確認や講師からの連絡を受け取ることができます。講師アカウントでログインすると、生徒一人ひとりの成績の入力や、生徒に向けての連絡を送ることができます。個別送信も全体送信もできます。担任アカウントでログインすると、生徒の成績の確認や、アカウント管理ができます。</p>
+                </div>
+            </div>
+        </div>
+
+        <!-- モーダル本体 -->
+        <div class="modal-container5">
+            <div class="modal-body">
+                <!-- 閉じるボタン -->
+                <div class="modal-close">x</div>
+                <!-- モーダル内のコンテンツ -->
+                <div class="modal-content">
+                    <p>学校に入学してから二年間学んだことを詰め込んだポートフォリオです。</p>
+                </div>
+            </div>
+        </div>
+
     </main>
+<script>
+    $(function(){
+	// 変数に要素を入れる
+        var open = $('.modal-open'),
+            close = $('.modal-close'),
+            container = $('.modal-container');
+
+        //開くボタンをクリックしたらモーダルを表示する
+        open.on('click',function(){	
+            container.addClass('active');
+            return false;
+        });
+
+        //閉じるボタンをクリックしたらモーダルを閉じる
+        close.on('click',function(){	
+            container.removeClass('active');
+        });
+
+        //モーダルの外側をクリックしたらモーダルを閉じる
+        $(document).on('click',function(e) {
+            if(!$(e.target).closest('.modal-body').length) {
+                container.removeClass('active');
+            }
+        });
+    });
+    $(function(){
+	// 変数に要素を入れる
+        var open = $('.modal-open2'),
+            close = $('.modal-close'),
+            container = $('.modal-container2');
+
+        //開くボタンをクリックしたらモーダルを表示する
+        open.on('click',function(){	
+            container.addClass('active');
+            return false;
+        });
+
+        //閉じるボタンをクリックしたらモーダルを閉じる
+        close.on('click',function(){	
+            container.removeClass('active');
+        });
+
+        //モーダルの外側をクリックしたらモーダルを閉じる
+        $(document).on('click',function(e) {
+            if(!$(e.target).closest('.modal-body').length) {
+                container.removeClass('active');
+            }
+        });
+    });
+        $(function(){
+	// 変数に要素を入れる
+        var open = $('.modal-open3'),
+            close = $('.modal-close'),
+            container = $('.modal-container3');
+
+        //開くボタンをクリックしたらモーダルを表示する
+        open.on('click',function(){	
+            container.addClass('active');
+            return false;
+        });
+
+        //閉じるボタンをクリックしたらモーダルを閉じる
+        close.on('click',function(){	
+            container.removeClass('active');
+        });
+
+        //モーダルの外側をクリックしたらモーダルを閉じる
+        $(document).on('click',function(e) {
+            if(!$(e.target).closest('.modal-body').length) {
+                container.removeClass('active');
+            }
+        });
+    });
+    $(function(){
+	// 変数に要素を入れる
+        var open = $('.modal-open4'),
+            close = $('.modal-close'),
+            container = $('.modal-container4');
+
+        //開くボタンをクリックしたらモーダルを表示する
+        open.on('click',function(){	
+            container.addClass('active');
+            return false;
+        });
+
+        //閉じるボタンをクリックしたらモーダルを閉じる
+        close.on('click',function(){	
+            container.removeClass('active');
+        });
+
+        //モーダルの外側をクリックしたらモーダルを閉じる
+        $(document).on('click',function(e) {
+            if(!$(e.target).closest('.modal-body').length) {
+                container.removeClass('active');
+            }
+        });
+    });
+    $(function(){
+	// 変数に要素を入れる
+        var open = $('.modal-open5'),
+            close = $('.modal-close'),
+            container = $('.modal-container5');
+
+        //開くボタンをクリックしたらモーダルを表示する
+        open.on('click',function(){	
+            container.addClass('active');
+            return false;
+        });
+
+        //閉じるボタンをクリックしたらモーダルを閉じる
+        close.on('click',function(){	
+            container.removeClass('active');
+        });
+
+        //モーダルの外側をクリックしたらモーダルを閉じる
+        $(document).on('click',function(e) {
+            if(!$(e.target).closest('.modal-body').length) {
+                container.removeClass('active');
+            }
+        });
+    });
+
+
+
+</script>
 </body>
 </html>
